maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:24: error: ')' expected but '}' found.
} 
^